# pytest_deduplicate

./: README.md  _deduplicate_tests.py  cover.py  function.py  pyproject.toml  pytest_deduplicate.py  setup.py
tests/: function.py  test_simple.py
